# crepa

./: .gitignore  .pre-commit-config.yaml  PROPOSAL.md  README.md  TODO.md  mise.toml  pyproject.toml  results.csv
knowledge/: KNOWLEDGE.md  REPORT.md
knowledge/papers/: summary_dinov3.md  summary_ijepa.md  summary_imagenet_c.md  summary_mae.md  summary_many_faces_robustness.md  summary_sam3.md  summary_siglip2.md  summary_vjepa.md  summary_vjepa2.md  summary_vjepa2_1.md
logs/clean/: alexnet.txt  resnet18.txt  resnet50.txt
logs/imagenet/: alexnet.txt  beitv2_base_patch16_224.in1k_ft_in22k_in1k.txt  convnext_base.clip_laion2b_augreg_ft_in12k_in1k_384.txt  convnextv2_base.fcmae_ft_in22k_in1k.txt  deit3_base_patch16_384.fb_in22k_ft_in1k.txt  dinov2-with-registers-base-imagenet1k-1-layer.txt  dinov2-with-registers-giant-imagenet1k-1-layer.txt  dinov2-with-registers-large-imagenet1k-1-layer.txt  dinov2-with-registers-small-imagenet1k-1-layer.txt  eva02_base_patch14_448.mim_in22k_ft_in22k_in1k.txt  eva02_large_patch14_448.mim_m38m_ft_in22k_in1k.txt  eva_giant_patch14_224.clip_ft_in1k.txt  ijepa_vith14_1k.txt  resnet18.txt  resnet50.txt  vit_base_patch16_224.augreg2_in21k_ft_in1k.txt  vit_base_patch16_224.dino.txt  (+2 more)
logs/imagenet-c/: alexnet.txt  beitv2_base_patch16_224.in1k_ft_in22k_in1k.txt  convnext_base.clip_laion2b_augreg_ft_in12k_in1k_384.txt  convnextv2_base.fcmae_ft_in22k_in1k.txt  deit3_base_patch16_384.fb_in22k_ft_in1k.txt  dinov2-with-registers-base-imagenet1k-1-layer.txt  dinov2-with-registers-giant-imagenet1k-1-layer.txt  dinov2-with-registers-large-imagenet1k-1-layer.txt  dinov2-with-registers-small-imagenet1k-1-layer.txt  eva02_base_patch14_448.mim_in22k_ft_in22k_in1k.txt  eva_giant_patch14_224.clip_ft_in1k.txt  ijepa_vith14_1k.txt  resnet18.txt  resnet50.txt  vit_base_patch16_224.augreg2_in21k_ft_in1k.txt  vit_base_patch16_224.dino.txt  vit_base_patch16_224.mae.txt  vit_base_patch16_clip_224.openai_ft_in1k.txt
scripts/: extract_imagenet.sh  pull.sh  push.sh  slurm.sh
(+17 files in other folders)
