[project]
name = "crepa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.13.0",
  "pydantic-settings>=2.13.1",
  "rich>=15.0.0",
  "torch>=2.11.0",
  "torchvision>=0.26.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.3.9",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[project.scripts]
crepa = "crepa:main"

