[project]
name = "crepa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.13.0",
  "pydantic-settings>=2.13.1",
  "scipy>=1.17.1",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "rich>=15.0.0",
  "trackio[gpu]>=0.22.0",
  "transformers>=5.5.4",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = ["prek>=0.3.9", "ruff>=0.15.10", "ty>=0.0.29"]

[project.scripts]
crepa = "crepa:main"

[tool.ruff]
line-length = 120
lint.select = [
  "ALL", # include all the rules, including new ones
]
lint.ignore = [
  "D",       # missing docstrings
  "COM812",  # missing trailing comma, conflict with formatter
  "TD002",   # missing TODO author
  "TD003",   # missing issue link for this TODO
  "FIX002",  # fix TODOs
  "C901",    # too complex
  "PLR0912", # too many branches
  "PLR0913", # too many arguments
  "PLR0915", # too many statements
  "N806",    # variables in function should be lowercase, but we want to use `X` and `y` for data and labels
  "N812",    # lowercase package imported as non-lowercase, we wanna use `torch.nn.functional` as `F`
]
# https://github.com/astral-sh/ruff-vscode/blob/main/README.md#configuring-vs-code
lint.extend-select = ["I"]

[tool.ty]
rules.possibly-missing-attribute = "ignore" # https://github.com/astral-sh/ty/issues/2244
